--- a/static/style/src/less/history.less
+++ b/static/style/src/less/history.less
@@ -309,6 +309,7 @@ display: inline-block;
             .annotation {
                 .info-section;
                 white-space: pre-line;
+                overflow: auto;
             }
             .annotation:empty {
                 height: @icon-btn-size;
